--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -5,6 +5,7 @@
 <form method = "POST">
 {% csrf_token %}
 {{form.as_p}}
+{{ profile_form.as_p}}
 
 <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
 
