--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -4,50 +4,27 @@
 {% if ideas %}
 <div>
   {% for i in ideas %}
-  <div class="row">
-    <div class="col s12 m4">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">{% for c in i.category.all %}
-            {{c.category}}
-            {% endfor %}
-          </span>
-          <p>{{i.Post_idea}}</p>
-        </div>
-        <div>
-          <table>
-            <th>
-              <form method="POST" action="{% url 'delete_idea' i.pk %}">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-primary btn-sm"> Delete </button>
-              </form>
-            </th>
-            <th>
-              <form method="POST" action="{% url 'edit_idea' i.pk %}">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-primary btn-sm"> edit </button>
-              </form>
-            </th>
-          </table>
-        </div>
-        <div class="card-action">
-          <a href="#">by {{i.ideaPeacher}}</a>
-          <a href="#">{{i.date_created}}</a>
-        </div>
-      </div>
+  <div class="card" style="width: 18rem; margin-bottom: 2rem; margin-top: 1rem; ">
+    <div class="card-body">
+      <h5 class="card-title">{% for c in i.category.all %}
+        {{c.category}}{% endfor %}</h5>
+
+      <p class="card-text">{{i.Post_idea}}</p>
+      <a href="{% url 'delete_idea' i.pk %}" class="card-link">Delete</a>
+      <a href="{% url 'edit_idea' i.pk %}" class="card-link">Edit</a>
+      <p class="card-text">by {{i.ideaPeacher}} {{i.date_created}}</p>
     </div>
   </div>
   {% endfor %}
+  {% else %}
+  <div class="container">
+    <div class="row">
+      <div class="card-body">
+        <h1 class="card-title"> No Result!! </h1>
 
-{% else %}
-<div class="container">
-  <div class="row">
-    <div class="card-body">
-      <h1 class="card-title"> No Result!! </h1>
-
+      </div>
     </div>
   </div>
-</div>
-{% endif %}
+  {% endif %}
 </div>
 {% endblock %}
