--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -1,27 +1,40 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">IDEA</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Share Your Idea </a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-       
-        
-        {% if user.is_authenticated %}
-        
-           <li><form class="search-bar" method="get">
-            <input type="text" name="q" placeholder="Search Here" value="{{query}}">
-          </form></li>
-            <li><a href="/home">Home</a></li>
-            <li><a href="/account">{{user.username}}</a></li>
-            <li><a href="/idea">Post</a></li>
-            <li><a href="/logout">Logout</a></li>
-            
-        {% else %}
-            <li><a href="/register">Register</a></li>
-            <li><a href="/login">Login</a></li>
-        {% endif %}
-        
-        </ul>
-    </div>
-  </nav>
- 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+    <ul class="navbar-nav mr-auto">
+      {% if user.is_authenticated %}
+      <li class="nav-item active">
+        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">{{user.username}}</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/idea">Post</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/logout">Logout</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0" method="get">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" value="{{query}}"
+        name="q">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    {% else %}
+    <li class="nav-item active">
+      <a class="nav-link" href="/register">Register </a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="/login">Login</a>
+    </li>
+    {% endif %}
+
+  </div>
+</nav>
