--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -4,42 +4,57 @@
 {% load crispy_forms_tags %}
 
 {% if ideas %}
+
+
 <div>
+  <form method="post" , action="submitidea/">
+    {% csrf_token %}
+    <select class="custom-select" name="dropdown">
+      <option selected>Choose Category</option>
+      <option value="Technology">Technology</option>
+      <option value="Transport">Transport</option>
+      <option value="Vehicle">Vehicle</option>
+      <option value="Health">Health</option>
+    </select>
+    <div class="input-group" style="margin-top: 2rem; margin-bottom: 2rem;">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Idea</span>
+      </div>
+      <textarea class="form-control" aria-label="With textarea" name="idea"></textarea>
+    </div>
+    <button type="Submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+<div>
+
   {% for i in ideas %}
   <div class="card" style="width: 18rem; margin-bottom: 2rem; margin-top: 1rem; ">
     <div class="card-body">
+      <p style="font-size:13px;margin-top:-20px">{{i.ideaPeacher}} <Span style="font-size:9px;float:right;">{{i.date_created}}</Span></p>
       <h5 class="card-title">{% for c in i.category.all %}
         {{c.category}}{% endfor %}</h5>
-
       <p class="card-text">{{i.Post_idea}}</p>
       <a href="{% url 'delete_idea' i.pk %}" class="card-link">Delete</a>
       <a href="{% url 'edit_idea' i.pk %}" class="card-link">Edit</a>
-      <p class="card-text">by {{i.ideaPeacher}} {{i.date_created}}</p>
+      <p>{{instance.like.count}}<a href='{{instance.get_like_url}}'>like</a></p> 
       {% if comments %}
-      <div>
-        {% for c in comments %}
+     
+        {%  for b in comments %}
         
+          <p>{{b.public_comment}}  <span>{{b.by}}</span></p>
         
-        <p class="card-text">{{c.public_comment}}<span>{{i.date_created}}</span></p>
-
-
+          {% endfor %}
+          {% else %}
+          
+          {% endif %}
         
-
-
-        {% else %}
-        happy
-
-        {%  endfor %}
-
-        {% endif %}
-
-        
-      </div>
-      <form method='GET', action='submitcomment/'>
+      
+      <form method='Post', action='submitcomment/'>
+        {% csrf_token %}
         <div class="input-group" style="margin-top: 2rem; margin-bottom: 2rem;">
           <textarea class="form-control" aria-label="With textarea" name="comment" placeholder='comment'></textarea>
         </div>
-        <button type="Submit" id='commentbtn' class="btn " style="background-color: green;border-radius:20px;">Comment</button>           
+        <button type="Submit" id='commentbtn' class="btn" style="background-color: green;border-radius:20px;font-size:9px;color:white;">Comment</button>           
       </form>
     </div>
   </div>
