--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -3,11 +3,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<form method="POST">
-    {% csrf_token %}
-    {{form|crispy}}
-    {{ profile_form|crispy}}
-    <button type="Submit" class="btn btn-primary">Signup</button>
-</form>
+<div style="width:300px;float:right;margin-right:200px;">
+    <form method="POST">
+        {% csrf_token %}
+        {{form|crispy}}
+        {{ profile_form|crispy}}
+        <button type="Submit" class="btn btn-primary">Signup</button>
+    </form>
+</div>
 
 {% endblock %}
