--- a/main/templates/main/home1.html
+++ b/main/templates/main/home1.html
@@ -1,25 +1,31 @@
 {% extends 'main/header.html' %}
 {% block content %}
 
-<div class='container'>
-  <h2>profile</h2>
-  <div>
-    <img src="{{user.userprofile.image.url}}" alt="{{user.name}}">
-    <p>username:     {{user}}</p>
-    <p>First name:   {{user.first_name}}</p>
-    <p>Last Name:    {{user.last_name}}</p>
-    <p>Email:        {{user.email}}</p>
-    <p>Age:          {{user.userprofile.age}}</p>
+{% load crispy_forms_tags %}
 
-    Post
-
-
-    {{idea.ideapeacher.Post_idea}}
-    {% if ideas %}
+{% if ideas %}
 
 
 <div>
-  
+  <form method="post" , action="submitidea/">
+    {% csrf_token %}
+    <select class="custom-select" name="dropdown">
+      <option selected>Choose Category</option>
+      <option value="Technology">Technology</option>
+      <option value="Transport">Transport</option>
+      <option value="Vehicle">Vehicle</option>
+      <option value="Health">Health</option>
+    </select>
+    <div class="input-group" style="margin-top: 2rem; margin-bottom: 2rem;">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Idea</span>
+      </div>
+      <textarea class="form-control" aria-label="With textarea" name="idea"></textarea>
+    </div>
+    <button type="Submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+<div>
 
   {% for i in ideas %}
   <div class="card" style="width: 18rem; margin-bottom: 2rem; margin-top: 1rem; ">
@@ -28,8 +34,6 @@
       <h5 class="card-title">{% for c in i.category.all %}
         {{c.category}}{% endfor %}</h5>
       <p class="card-text">{{i.Post_idea}}</p>
-      <a href="{% url 'delete_idea' i.pk %}" class="card-link">Delete</a>
-      <a href="{% url 'edit_idea' i.pk %}" class="card-link">Edit</a>
       <p>{{instance.like.count}}<a href='{{instance.get_like_url}}'>like</a></p> 
       <p>{{public.count}} Comment</p>
         {%  for b in comments %}
@@ -64,10 +68,4 @@
   </div>
   {% endif %}
 </div>
-
-  </div>
-</div>
-
-
-
 {% endblock %}
