--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -1,7 +1,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">IDEA</a>
+  <a class="navbar-brand" href="">IDEA</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -30,13 +30,16 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
     {% else %}
+    <li class="nav-item active">
+      <a class="nav-link" href="{% url 'register' %}">Register </a>
+    </li>
     <div style="margin-left:800px" >
-      <form method="POST" action="{% url 'login' %}" >
-          {% csrf_token %}
+      <form method="POST" action="login/" >
+        {% csrf_token %}
             <div id ="login_form"style='float:right'>
               <input type="text" name="username" placeholder="Username..." >
               <input type="password" name="password" placeholder="Password..." >
-              <button style="border-radius:20px;background-color:dodgerblue;color:white;border:none" value="Login" type="submit">log ln</button>
+              <a href="{% url 'login' %}"><button style="border-radius:20px;background-color:dodgerblue;color:white;border:none">log ln</button></a>
             </div>
         
         {% for message in messages %}
