--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,3 +1,6 @@
+body{
+  background-color:whitesmoke
+}
 footer{
   background-color:lightgrey;
   height:70px;
@@ -38,4 +41,17 @@ footer #copy:hover{
 }
 #login_form{
   float:right;
+}
+
+#idealist{
+  margin-left:25%;
+  margin-right:20%;
+  margin-bottom:2%;
+  background-color:lightgrey;
+  border:1px; 
+  
+}
+.idea_box{
+  padding:7%;
+  
 }
