--- a/static/css/app.css
+++ b/static/css/app.css
@@ -33,7 +33,7 @@ footer #copy:hover{
   color:white;
 }
 .btn:hover{
-  background-color:lightgrey !important;
+  background-color:grey !important;
   
   font-size:20px;
   transition:all .9 ease;
@@ -49,6 +49,7 @@ footer #copy:hover{
   margin-bottom:2%;
   background-color:lightgrey;
   border:1px; 
+  border-radius:20px;
   
 }
 .idea_box{
