--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -1,7 +1,7 @@
 {% extends 'main/header.html' %}
 {% block content %}
 
-<div class='container'>
+<div class='profile'>
   <h2>profile</h2>
   <div>
     <img src="{{user.userprofile.image.url}}" alt="{{user.name}}">
@@ -10,64 +10,11 @@
     <p>Last Name:    {{user.last_name}}</p>
     <p>Email:        {{user.email}}</p>
     <p>Age:          {{user.userprofile.age}}</p>
-
-    Post
-
-
-    {{idea.ideapeacher.Post_idea}}
-    {% if ideas %}
-
-
+  </div>
 <div>
   
 
-  {% for i in ideas %}
-  <div class="card" style="width: 18rem; margin-bottom: 2rem; margin-top: 1rem; ">
-    <div class="card-body">
-      <p style="font-size:13px;margin-top:-20px"><a href="/profile">{{i.ideaPeacher}} </a><Span style="font-size:9px;float:right;">{{i.date_created}}</Span></p>
-      <h5 class="card-title">{% for c in i.category.all %}
-        {{c.category}}{% endfor %}</h5>
-      <p class="card-text">{{i.Post_idea}}</p>
-      <a href="{% url 'delete_idea' i.pk %}" class="card-link">Delete</a>
-      <a href="{% url 'edit_idea' i.pk %}" class="card-link">Edit</a>
-      <p>{{instance.like.count}}<a href='{{instance.get_like_url}}'>like</a></p> 
-      <p>{{public.count}} Comment</p>
-        {%  for b in comments %}
-
-        
-          <p>{{b.public_comment}}  <span>{{b.by}}</span></p>
-        
-          {% endfor %}
-          
-          
-          
-        
-      
-      <form method='Post', action='submitcomment/'>
-        {% csrf_token %}
-        <div class="input-group" style="margin-top: 2rem; margin-bottom: 2rem;">
-          <textarea class="form-control" aria-label="With textarea" name="comment" placeholder='comment'></textarea>
-        </div>
-        <button type="Submit" id='commentbtn' class="btn" style="background-color: green;border-radius:20px;font-size:9px;color:white;">Comment</button>           
-      </form>
-    </div>
-  </div>
-  {% endfor %}
-  {% else %}
-  <div class="container">
-    <div class="row">
-      <div class="card-body">
-        <h1 class="card-title"> No Result!! </h1>
-
-      </div>
-    </div>
-  </div>
-  {% endif %}
-</div>
-
-  </div>
-</div>
-
+  
 
 
 {% endblock %}
