--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -49,7 +49,7 @@
           {% endif %}
         
       
-      <form method='Post', action='submitcomment/'>
+      <form method='Post', action="{% url 'comment' i.pk %}">
         {% csrf_token %}
         <div class="input-group" style="margin-top: 2rem; margin-bottom: 2rem;">
           <textarea class="form-control" aria-label="With textarea" name="comment" placeholder='comment'></textarea>
