--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -4,12 +4,13 @@
 
 {% block content %}
 {% load crispy_forms_tags %}
-    <div Style="margin-left:800px;">
+    <div Style="margin-left:750px;">
         <h2>   Create A free account </h2>
         <div >
             <form method="POST">
                 {% csrf_token %}
-                {{form|crispy}}{{ profile_form|crispy}}
+                {{form|crispy}}
+                {{ profile_form|crispy}}
                 
                 <button type="Submit" class="btn btn-primary">Signup</button>
             </form>
