--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -37,14 +37,14 @@
       <a href="{% url 'delete_idea' i.pk %}" class="card-link">Delete</a>
       <a href="{% url 'edit_idea' i.pk %}" class="card-link">Edit</a>
       <p>{{instance.like.count}}<a href='{{instance.get_like_url}}'>like</a></p> 
-      <p>{{public.count}} Comment</p>
+    
         {%  for b in comments %}
        {% ifequal i.id b.on_post.id %}
-         
+        <p>{{b.by}}  {{b.comment}}</p>
         
-          <p>{{b.comment}}  <span> by {{b.by}}</span></p>
-         {% endifequal %}
-          {% endfor %}
+       
+       {% endifequal %}
+        {% endfor %}
           
           
           
