--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -1,14 +1,10 @@
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="">IDEA</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
     <ul class="navbar-nav mr-auto">
       {% if user.is_authenticated %}
       <li class="nav-item active">
@@ -16,9 +12,6 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/profile">{{user.username}}</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="/idea">Post</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/logout">Logout</a>
@@ -30,27 +23,19 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
     {% else %}
-    <li class="nav-item active">
-      <a class="nav-link" href="{% url 'register' %}">Register </a>
-    </li>
-    <div style="margin-left:800px" >
-
-      <form method="POST" action="{% url 'login'%}" >
-
+    <div>
+      <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
-            <div id ="login_form"style='float:right'>
-              <input type="text" name="username" placeholder="Username..." >
-              <input type="password" name="password" placeholder="Password..." >
-              <button style="border-radius:20px;background-color:dodgerblue;color:white;border:none">log ln</button>
-            </div>
-        
+        <div id="login_form" style='float:right'>
+          <input type="text" name="username" placeholder="Username...">
+          <input type="password" name="password" placeholder="Password...">
+          <button style="border-radius:20px;background-color:dodgerblue;color:white;border:none">log ln</button>
+        </div>
         {% for message in messages %}
         <p id="messages">{{message}}</p>
         {% endfor %}
       </form>
-
     </div>
     {% endif %}
-
   </div>
 </nav>
